--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -780,6 +780,8 @@ on boot
     chown system system /sys/bus/iio/devices/iio:device4/buffer/enable
     chown system system /sys/bus/iio/devices/iio:device5/buffer/length
     chown system system /sys/bus/iio/devices/iio:device5/buffer/enable
+    chmod 0600 /dev/batch_io
+    chown system system /dev/batch_io
 
     # Gesture_sensor
     chown system radio /sys/class/sensors/gesture_sensor/vendor
@@ -952,6 +954,11 @@ service mpdecision /system/bin/mpdecision --avg_comp
     user root
     group system
     disabled
+
+service sensorhubservice /system/bin/sensorhubservice
+    class main
+    user system
+    group input
 
 service thermal-engine /system/bin/thermal-engine
     class core
@@ -1167,7 +1174,7 @@ on property:sys.boot_completed=1
 service charger /charger
     class charger
     seclabel u:r:healthd:s0
-
+    
 service sec-sh /system/bin/sh /system/etc/init.sec.boot.sh
     class main
     user root
