--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -940,17 +940,14 @@ service qseecomd /system/bin/qseecomd
     group system
 
 service mpdecision /system/bin/mpdecision --avg_comp
-   class main
-   user root
-   disabled
+    user root
+    group system
+    disabled
 
-service thermal-engine /system/vendor/bin/thermal-engine
-   class main
-   user root
-   socket thermal-send-client stream 0666 system system
-   socket thermal-recv-client stream 0660 system system
-   socket thermal-recv-passive-client stream 0666 system system
-   group root
+service thermal-engine /system/bin/thermal-engine
+    class core
+    user root
+    group radio system
 
 service time_daemon /system/bin/time_daemon
     class late_start
