klte-common: fix wifi calibration
Enable macloader to load the correct nvram calibration
data matching the hardware variant.  Since macloader
writes files in /data it needs to rerun after decryption,
requiring running during late_start. Additionally,
calibration data needs to be reloaded every time the driver
is reloaded.

Note that /sys/module/dhd/parameters/nvram_path is cleared
after the driver has accepted the input, you can use
"dhdutil -a wlan0 vars" to confirm that the calibration
data has been applied.

Change-Id: Ieb8ef0eafeead10a6dfc32862887abbe84e22a93

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -1031,9 +1031,12 @@ on property:init.svc.p2p_supplicant=stopped
     stop dhcpcd
 
 service macloader /system/bin/macloader
-    class main
+    class late_start
     oneshot
     seclabel u:r:macloader:s0
+
+on property:wlan.driver.status=ok
+    start macloader
 
 on property:init.svc.macloader=stopped
     chown system root /data/.rev
