klte-common: init: Add seclabel to macloader service
Change-Id: If1665aa5e0c741712b7c0bdc0403045ccbbb7ef3

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -1033,6 +1033,7 @@ on property:init.svc.p2p_supplicant=stopped
 service macloader /system/bin/macloader
     class main
     oneshot
+    seclabel u:r:macloader:s0
 
 on property:init.svc.macloader=stopped
     chown system root /data/.rev
